--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "az-nwch-js",
   "version": "0.0.0",
   "private": true,
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp": "^3.8.11"
+  },
   "pre-commit": []
 }
