--- a/package.json
+++ b/package.json
@@ -2,8 +2,35 @@
   "name": "az-nwch-js",
   "version": "0.0.0",
   "private": true,
-  "devDependencies": {
-    "gulp": "^3.8.11"
+  "description": "Front-end stack for AZ Medien",
+  "main": "server/server.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lovelysystems/az-nwch-js"
   },
-  "pre-commit": []
+  "author": "Edenspiekermann",
+  "bugs": {
+    "url": "https://github.com/lovelysystems/az-nwch-js/issues"
+  },
+  "scripts": {
+    "watch": "node .",
+    "pretest": "jshint ."
+  },
+  "dependencies": {
+    "compression": "^1.0.3",
+    "cors": "^2.5.2",
+    "errorhandler": "^1.1.1",
+    "loopback": "^2.14.0",
+    "loopback-boot": "^2.6.5",
+    "loopback-datasource-juggler": "^2.19.0",
+    "strong-express-metrics": "^1.1.0",
+    "serve-favicon": "^2.0.1"
+  },
+  "optionalDependencies": {
+    "loopback-explorer": "^1.1.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.8.11",
+    "jshint": "^2.5.6"
+  }
 }
