--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "scripts": {
     "watch": "node .",
-    "pretest": "jshint ."
+    "pre-commit": "eslint .",
+    "pretest": "eslint ."
   },
   "dependencies": {
     "compression": "^1.0.3",
@@ -31,6 +32,8 @@
   },
   "devDependencies": {
     "gulp": "^3.8.11",
-    "jshint": "^2.5.6"
+    "jshint": "^2.5.6",
+    "captain-git-hook": "^1.1.0",
+    "eslint": "^0.21.2"
   }
 }
