--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "watch": "node .",
-    "pre-commit": "eslint .",
+    "pre-commit": "eslint . && scss-lint ./ --config ./.scss-lint.yml",
     "pretest": "eslint ."
   },
   "dependencies": {
