--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   },
   "scripts": {
     "watch": "node .",
-    "pre-commit": "eslint . && scss-lint ./ --config ./.scss-lint.yml",
-    "pretest": "eslint ."
+    "eslint": "node_modules/eslint/bin/eslint.js .",
+    "scss-lint": "scss-lint"
   },
+  "pre-commit": [
+    "eslint",
+    "scss-lint"
+  ],
   "dependencies": {
     "compression": "^1.0.3",
     "cors": "^2.5.2",
@@ -24,16 +28,16 @@
     "loopback": "^2.14.0",
     "loopback-boot": "^2.6.5",
     "loopback-datasource-juggler": "^2.19.0",
-    "strong-express-metrics": "^1.1.0",
-    "serve-favicon": "^2.0.1"
+    "nunjucks": "^1.3.4",
+    "serve-favicon": "^2.0.1",
+    "strong-express-metrics": "^1.1.0"
   },
   "optionalDependencies": {
     "loopback-explorer": "^1.1.0"
   },
   "devDependencies": {
+    "eslint": "^0.21.2",
     "gulp": "^3.8.11",
-    "jshint": "^2.5.6",
-    "captain-git-hook": "^1.1.0",
-    "eslint": "^0.21.2"
+    "precommit-hook": "^2.0.1"
   }
 }
