--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gulp-concat": "^2.5.2",
     "gulp-eslint": "^0.12.0",
     "gulp-livereload": "^3.8.0",
+    "gulp-load-plugins": "^0.10.0",
     "gulp-nodemon": "^2.0.3",
     "gulp-sass": "^2.0.1",
     "gulp-scss-lint": "^0.2.0",
