--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint"
   ],
   "dependencies": {
+    "babel": "^5.4.7",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "errorhandler": "^1.1.1",
