--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "url": "https://github.com/lovelysystems/az-nwch-js/issues"
   },
   "scripts": {
-    "lint": "gulp lint"
+    "lint": "gulp lint",
+    "webpack": "webpack"
   },
   "pre-commit": [
     "lint"
@@ -34,6 +35,7 @@
     "loopback-explorer": "^1.1.0"
   },
   "devDependencies": {
+    "babel-loader": "^5.1.3",
     "consolidate": "^0.13.1",
     "eslint": "^0.21.2",
     "gulp": "^3.8.11",
@@ -48,6 +50,7 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-util": "^3.0.4",
     "precommit-hook": "^2.0.1",
-    "sassdoc": "^2.1.13"
+    "sassdoc": "^2.1.13",
+    "webpack": "^1.9.10"
   }
 }
