--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gulp-autoprefixer": "^2.3.0",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.5.2",
+    "gulp-copy": "0.0.2",
     "gulp-eslint": "^0.12.0",
     "gulp-livereload": "^3.8.0",
     "gulp-load-plugins": "^0.10.0",
