--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint": "^0.21.2",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.3.0",
+    "gulp-base64": "^0.1.3",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.5.2",
     "gulp-copy": "0.0.2",
