--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-loader": "^5.1.3",
     "consolidate": "^0.13.1",
     "eslint": "^0.21.2",
+    "eslint-plugin-react": "^2.4.0",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.3.0",
     "gulp-base64": "^0.1.3",
@@ -45,6 +46,7 @@
     "gulp-concat": "^2.5.2",
     "gulp-copy": "0.0.2",
     "gulp-eslint": "^0.12.0",
+    "gulp-exit": "0.0.2",
     "gulp-livereload": "^3.8.0",
     "gulp-load-plugins": "^0.10.0",
     "gulp-nodemon": "^2.0.3",
