get linting working, with colours

--- a/package.json
+++ b/package.json
@@ -12,7 +12,14 @@
   "bugs": {
     "url": "https://github.com/lovelysystems/az-nwch-js/issues"
   },
-  "precommit": "gulp lint",
+  "scripts": {
+    "lint": "gulp lint"
+  },
+  "pre-commit": {
+    "run": "lint",
+    "colors": true,
+    "silent": true
+  },
   "dependencies": {
     "babel": "^5.4.7",
     "compression": "^1.0.3",
@@ -51,9 +58,8 @@
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4",
     "gulp-webpack": "^1.4.0",
-    "javascript-gulp-precommit": "0.0.2",
-    "precommit-hook": "^2.0.1",
-    "run-sequence": "^1.1.0",
+    "javascript-precommit": "0.0.8",
+    "pre-commit": "^1.0.7",
     "sassdoc": "^2.1.13",
     "webpack": "^1.9.10"
   }
