--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -94,7 +94,7 @@ linters:
 
   PropertySpelling:
     enabled: true
-    extra_properties: []
+    extra_properties: ['text-size-adjust']
 
   QualifyingElement:
     enabled: true
