--- a/package.json
+++ b/package.json
@@ -22,22 +22,25 @@
   },
   "dependencies": {
     "babel": "^5.4.7",
+    "babel-loader": "^5.1.3",
     "compression": "^1.0.3",
+    "consolidate": "^0.13.1",
     "cors": "^2.5.2",
     "errorhandler": "^1.1.1",
+    "glob": "^5.0.10",
     "loopback": "^2.14.0",
     "loopback-boot": "^2.6.5",
     "loopback-datasource-juggler": "^2.19.0",
     "nunjucks": "^1.3.4",
     "serve-favicon": "^2.0.1",
-    "strong-express-metrics": "^1.1.0"
+    "slug-to-title": "0.0.1",
+    "strong-express-metrics": "^1.1.0",
+    "webpack": "^1.9.10"
   },
   "optionalDependencies": {
     "loopback-explorer": "^1.1.0"
   },
   "devDependencies": {
-    "babel-loader": "^5.1.3",
-    "consolidate": "^0.13.1",
     "eslint": "^0.21.2",
     "eslint-plugin-react": "^2.4.0",
     "gulp": "^3.8.11",
@@ -60,7 +63,6 @@
     "gulp-webpack": "^1.4.0",
     "javascript-precommit": "0.0.8",
     "pre-commit": "^1.0.7",
-    "sassdoc": "^2.1.13",
-    "webpack": "^1.9.10"
+    "sassdoc": "^2.1.13"
   }
 }
