--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "loopback-boot": "^2.6.5",
     "loopback-datasource-juggler": "^2.19.0",
     "nunjucks": "^1.3.4",
+    "react": "^0.13.3",
     "serve-favicon": "^2.0.1",
     "strong-express-metrics": "^1.1.0"
   },
