--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "serve-favicon": "^2.0.1",
     "slug-to-title": "0.0.1",
     "strong-express-metrics": "^1.1.0",
-    "webpack": "^1.9.10"
+    "webpack": "^1.9.10",
+    "whatwg-fetch": "^0.9.0"
   },
   "optionalDependencies": {
     "loopback-explorer": "^1.1.0"
