--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "loopback-datasource-juggler": "^2.19.0",
     "nunjucks": "^1.3.4",
     "react": "^0.13.3",
+    "remarkable": "^1.6.0",
     "serve-favicon": "^2.0.1",
     "slug-to-title": "0.0.1",
     "strong-express-metrics": "^1.1.0",
