--- a/package.json
+++ b/package.json
@@ -27,18 +27,16 @@
     "consolidate": "^0.13.1",
     "cors": "^2.5.2",
     "errorhandler": "^1.1.1",
+    "fs": "0.0.2",
     "glob": "^5.0.10",
     "loopback": "^2.14.0",
     "loopback-boot": "^2.6.5",
     "loopback-datasource-juggler": "^2.19.0",
     "nunjucks": "^1.3.4",
     "react": "^0.13.3",
-    "remarkable": "^1.6.0",
     "serve-favicon": "^2.0.1",
-    "slug-to-title": "0.0.1",
     "strong-express-metrics": "^1.1.0",
-    "webpack": "^1.9.10",
-    "whatwg-fetch": "^0.9.0"
+    "webpack": "^1.9.10"
   },
   "optionalDependencies": {
     "loopback-explorer": "^1.1.0"
@@ -65,9 +63,14 @@
     "gulp-util": "^3.0.4",
     "gulp-webpack": "^1.4.0",
     "javascript-precommit": "0.0.8",
+    "lodash": "^3.9.3",
     "pre-commit": "^1.0.7",
     "react-bem-helper": "0.0.3",
+    "react-marked": "^0.3.1",
+    "react-remarkable": "^1.1.1",
     "sassdoc": "^2.1.13",
-    "url-parse": "^1.0.1"
+    "slug-to-title": "0.0.1",
+    "url-parse": "^1.0.1",
+    "whatwg-fetch": "^0.9.0"
   }
 }
