--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "nunjucks": "^1.3.4",
     "react": "^0.13.3",
     "serve-favicon": "^2.0.1",
+    "slug-to-title": "0.0.1",
+    "slugify": "^0.1.1",
     "strong-express-metrics": "^1.1.0",
     "webpack": "^1.9.10"
   },
@@ -66,7 +68,6 @@
     "react-bem-helper": "0.0.3",
     "react-remarkable": "^1.1.1",
     "sassdoc": "^2.1.13",
-    "slug-to-title": "0.0.1",
     "url-parse": "^1.0.1",
     "whatwg-fetch": "^0.9.0"
   }
