--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "eslint": "^0.22.1",
     "eslint-plugin-react": "^2.4.0",
+    "faster-react-tabs": "0.0.3",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.3.0",
     "gulp-base64": "^0.1.3",
