--- a/package.json
+++ b/package.json
@@ -67,7 +67,9 @@
     "gulp-webpack": "^1.4.0",
     "pre-commit": "^1.0.7",
     "react-bem-helper": "0.0.3",
+    "react-highlight": "^0.4.1",
     "react-remarkable": "^1.1.1",
+    "react-to-jsx": "^1.3.1",
     "sassdoc": "^2.1.13",
     "url-parse": "^1.0.1",
     "whatwg-fetch": "^0.9.0"
