--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lint": "gulp lint"
   },
   "pre-commit": {
-    "run": "lint",
+    // "run": "lint",
     "colors": true,
     "silent": true
   },
@@ -70,7 +70,7 @@
     "gulp-webpack": "^1.4.0",
     "pre-commit": "^1.0.7",
     "react-bem-helper": "0.0.3",
-    "react-highlight": "^0.4.1",
+    "react-hiheroku oghlight": "^0.4.1",
     "react-remarkable": "^1.1.1",
     "react-to-jsx": "^1.3.1",
     "sassdoc": "^2.1.13",
