--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "gulp-webpack": "^1.4.0",
     "pre-commit": "^1.0.7",
     "react-bem-helper": "0.0.3",
-    "react-hiheroku oghlight": "^0.4.1",
+    "react-highlight": "^0.4.1",
     "react-remarkable": "^1.1.1",
     "react-to-jsx": "^1.3.1",
     "sassdoc": "^2.1.13",
