--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "url": "https://github.com/lovelysystems/az-nwch-js/issues"
   },
   "scripts": {
-    "lint": "gulp lint"
+    "lint": "gulp lint",
+    "start": "node server/server.js"
   },
   "pre-commit": {
     "run": "lint",
