--- a/package.json
+++ b/package.json
@@ -69,9 +69,11 @@
     "gulp-scss-lint": "^0.2.0",
     "gulp-sequence": "^0.3.2",
     "gulp-sourcemaps": "^1.5.2",
+    "gulp-tap": "^0.1.3",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4",
     "gulp-webpack": "^1.4.0",
+    "gulp-wrap": "^0.11.0",
     "pre-commit": "^1.0.7",
     "react-bem-helper": "0.0.3",
     "react-highlight": "^0.4.1",
