--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "url": "https://github.com/lovelysystems/az-nwch-js/issues"
   },
   "scripts": {
+    "watch": "gulp",
     "lint": "gulp lint",
     "start": "node server/server.js"
   },
