--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cors": "^2.5.2",
     "errorhandler": "^1.1.1",
     "glob": "^5.0.10",
+    "globule": "^0.2.0",
     "lodash": "^3.9.3",
     "loopback": "^2.14.0",
     "loopback-boot": "^2.6.5",
@@ -40,6 +41,7 @@
     "nunjucks": "^1.3.4",
     "react": "^0.13.3",
     "serve-favicon": "^2.0.1",
+    "simple-glob": "^0.1.0",
     "slug-to-title": "0.0.1",
     "slugify": "^0.1.1",
     "strong-express-metrics": "^1.1.0",
