--- a/package.json
+++ b/package.json
@@ -31,9 +31,8 @@
     "compression": "^1.0.3",
     "consolidate": "^0.13.1",
     "cors": "^2.5.2",
+    "del": "^1.2.0",
     "errorhandler": "^1.1.1",
-    "glob": "^5.0.10",
-    "globule": "^0.2.0",
     "lodash": "^3.9.3",
     "loopback": "^2.14.0",
     "loopback-boot": "^2.6.5",
@@ -53,11 +52,9 @@
   "devDependencies": {
     "eslint": "^0.22.1",
     "eslint-plugin-react": "^2.4.0",
-    "faster-react-tabs": "0.0.3",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.3.0",
     "gulp-base64": "^0.1.3",
-    "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.5.2",
     "gulp-copy": "0.0.2",
     "gulp-eslint": "^0.12.0",
@@ -69,7 +66,6 @@
     "gulp-scss-lint": "^0.2.0",
     "gulp-sequence": "^0.3.2",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-tap": "^0.1.3",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4",
     "gulp-webpack": "^1.4.0",
@@ -80,7 +76,6 @@
     "react-remarkable": "^1.1.1",
     "react-to-jsx": "^1.3.1",
     "sassdoc": "^2.1.13",
-    "url-parse": "^1.0.1",
     "whatwg-fetch": "^0.9.0"
   }
 }
