--- a/package.json
+++ b/package.json
@@ -56,18 +56,17 @@
     "gulp-autoprefixer": "^2.3.0",
     "gulp-base64": "^0.1.3",
     "gulp-concat": "^2.5.2",
-    "gulp-copy": "0.0.2",
     "gulp-eslint": "^0.12.0",
-    "gulp-exit": "0.0.2",
     "gulp-livereload": "^3.8.0",
     "gulp-load-plugins": "^0.10.0",
     "gulp-nodemon": "^2.0.3",
+    "gulp-plumber": "^1.0.1",
     "gulp-sass": "^2.0.1",
     "gulp-scss-lint": "^0.2.0",
     "gulp-sequence": "^0.3.2",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
-    "gulp-util": "^3.0.4",
+    "gulp-util": "^3.0.5",
     "gulp-webpack": "^1.4.0",
     "gulp-wrap": "^0.11.0",
     "pre-commit": "^1.0.7",
