--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "babel-loader": "^5.1.3",
     "consolidate": "^0.13.1",
     "cors": "^2.5.2",
+    "crypto": "0.0.3",
+    "crypto-js": "^3.1.5",
     "del": "^1.2.0",
     "errorhandler": "^1.1.1",
     "lodash": "^3.9.3",
@@ -38,18 +40,19 @@
     "loopback-datasource-juggler": "^2.19.0",
     "nunjucks": "^1.3.4",
     "react": "^0.13.3",
+    "sassdoc": "^2.1.13",
     "serve-favicon": "^2.0.1",
     "simple-glob": "^0.1.0",
     "slug-to-title": "0.0.1",
     "slugify": "^0.1.1",
     "strong-express-metrics": "^1.1.0",
-    "sassdoc": "^2.1.13",
     "webpack": "^1.9.10"
   },
   "optionalDependencies": {
     "loopback-explorer": "^1.1.0"
   },
   "devDependencies": {
+    "base64url": "^1.0.4",
     "eslint": "^0.22.1",
     "eslint-plugin-react": "^2.4.0",
     "gulp": "^3.8.11",
