--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "errorhandler": "^1.1.1",
     "filesize": "^3.1.2",
     "flickity": "^1.1.0",
+    "jquery": "^2.1.4",
     "lodash": "^3.9.3",
     "loopback": "^2.14.0",
     "loopback-boot": "^2.6.5",
