--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lodash": "^3.9.3",
     "loopback": "^2.14.0",
     "loopback-boot": "^2.6.5",
+    "loopback-connector-rest": "^1.9.0",
     "loopback-datasource-juggler": "^2.19.0",
     "nunjucks": "^1.3.4",
     "react": "^0.13.3",
