configure dummy API:  - models ‘Users’ & ‘UserRepos’  - connect to GitHub API  - implement a utility to add functions generically.

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -25,5 +25,14 @@
   "Role": {
     "dataSource": "db",
     "public": false
+  },
+
+  "User": {
+    "dataSource": "az-api",
+    "public": false
+  },
+  "UserRepos": {
+    "dataSource": "az-api",
+    "public": false
   }
 }
