--- a/server/model-config.json
+++ b/server/model-config.json
@@ -27,6 +27,11 @@
     "public": false
   },
 
+  "RESTModel": {
+    "dataSource": "az-api",
+    "public": false
+  },
+
   "User": {
     "dataSource": "az-api",
     "public": false
