--- a/server/model-config.json
+++ b/server/model-config.json
@@ -31,7 +31,35 @@
     "public": false
   },
   "PublishedNewsArticle": {
-      "dataSource": "az-api",
-      "public": false
+    "dataSource": "az-api",
+    "public": false
+  },
+  "AssetAudio": {
+    "dataSource": "az-api",
+    "public": false
+  },
+  "AssetDocument": {
+    "dataSource": "az-api",
+    "public": false
+  },
+  "AssetHtmlSnippet": {
+    "dataSource": "az-api",
+    "public": false
+  },
+  "AssetImage": {
+    "dataSource": "az-api",
+    "public": false
+  },
+  "AssetImageGallery": {
+    "dataSource": "az-api",
+    "public": false
+  },
+  "AssetQuiz": {
+    "dataSource": "az-api",
+    "public": false
+  },
+  "AssetVideo": {
+    "dataSource": "az-api",
+    "public": false
   }
 }
