--- a/localdev/buildout.cfg
+++ b/localdev/buildout.cfg
@@ -15,12 +15,13 @@ supervisor = 8899
 [conf]
 recipe = z3c.recipe.filetemplate
 files = etc/supervisord.conf
-        nginx/backend.conf
+        nginx/www.conf
 
 extends = ports
 
 [backend]
-upstream = az-dev.lovelysystems.com
+#upstream = az-dev.lovelysystems.com
+upstream = aaz.azbe.lovelysystems.com
 node = localhost:8000
 
 [dirs]
