fixed domain names

--- a/localdev/buildout.cfg
+++ b/localdev/buildout.cfg
@@ -20,7 +20,7 @@ files = etc/supervisord.conf
 extends = ports
 
 [backend]
-#upstream = az-dev.lovelysystems.com
+#upstream = aaz-azdev.lovelysystems.com
 upstream = aaz.azbe.lovelysystems.com
 node = localhost:8000
 
