--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "gulp-util": "^3.0.5",
     "gulp-webpack": "^1.4.0",
     "gulp-wrap": "^0.11.0",
+    "is-retina": "^1.0.3",
     "picturefill": "^2.3.1",
     "pre-commit": "^1.0.7",
     "react-bem-helper": "0.0.3",
