provide API proxy

--- a/localdev/buildout.cfg
+++ b/localdev/buildout.cfg
@@ -23,6 +23,8 @@ extends = ports
 #upstream = aaz-azdev.lovelysystems.com
 upstream = aaz.azbe.lovelysystems.com
 node = localhost:8000
+#api = api-azdev.lovelysystems.com
+api = localhost:8711
 
 [dirs]
 recipe = z3c.recipe.mkdir
