--- a/deploy/etc/supervisord-dev.conf.in
+++ b/deploy/etc/supervisord-dev.conf.in
@@ -18,7 +18,7 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl = http://localhost:${ports:supervisor}
 
 [program:app]
-command = node ${buildout:bin-directory}/..
+command = node ${buildout:directory}/..
 redirect_stderr=true
 priority = 1
 stopasgroup = true
