--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "loopback-datasource-juggler": "^2.19.0",
     "nunjucks": "^1.3.4",
     "react": "^0.13.3",
+    "react-bem-helper": "^1.0.0",
     "serve-favicon": "^2.0.1",
     "simple-glob": "^0.1.0",
     "slug-to-title": "0.0.1",
