--- a/localdev/buildout.cfg
+++ b/localdev/buildout.cfg
@@ -20,11 +20,11 @@ files = etc/supervisord.conf
 extends = ports
 
 [backend]
-#upstream = aaz-azdev.lovelysystems.com
-upstream = aaz.azbe.lovelysystems.com
+upstream = aaz-azdev.lovelysystems.com
+#upstream = aaz.azbe.lovelysystems.com
+api = api-azdev.lovelysystems.com
+# api = localhost:8711
 node = localhost:8000
-#api = api-azdev.lovelysystems.com
-api = localhost:8711
 
 [dirs]
 recipe = z3c.recipe.mkdir
