--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "scripts": {
     "watch": "gulp",
     "lint": "gulp lint",
-    "start": "node server/server.js"
+    "start": "node server/server.js",
+    "test": "mocha --harmony test/components/*.spec.jsx --compilers jsx:test/util/compiler.js"
   },
   "pre-commit": {
     "run": "lint",
@@ -40,6 +41,7 @@
     "loopback-datasource-juggler": "^2.19.0",
     "nunjucks": "^1.3.4",
     "react": "^0.13.3",
+    "react-tools": "^0.13.3",
     "sassdoc": "^2.1.13",
     "serve-favicon": "^2.0.1",
     "simple-glob": "^0.1.0",
@@ -52,7 +54,7 @@
     "loopback-explorer": "^1.1.0"
   },
   "devDependencies": {
-    "base64url": "^1.0.4",
+    "chai": "^3.0.0",
     "eslint": "^0.22.1",
     "eslint-plugin-react": "^2.4.0",
     "gulp": "^3.8.11",
@@ -73,12 +75,14 @@
     "gulp-webpack": "^1.4.0",
     "gulp-wrap": "^0.11.0",
     "is-retina": "^1.0.3",
+    "mocha": "^2.2.5",
     "picturefill": "^2.3.1",
     "pre-commit": "^1.0.7",
     "react-bem-helper": "0.0.3",
     "react-highlight": "^0.4.1",
     "react-remarkable": "^1.1.1",
     "react-to-jsx": "^1.3.1",
+    "testdom": "^1.0.1",
     "whatwg-fetch": "^0.9.0"
   }
 }
