--- a/package.json
+++ b/package.json
@@ -75,6 +75,15 @@
     "gulp-webpack": "^1.4.0",
     "gulp-wrap": "^0.11.0",
     "is-retina": "^1.0.3",
+    "json-loader": "^0.5.2",
+    "karma": "^0.12.36",
+    "karma-chai": "^0.1.0",
+    "karma-chai-plugins": "^0.6.0",
+    "karma-chrome-launcher": "^0.1.12",
+    "karma-cli": "0.0.4",
+    "karma-mocha": "^0.2.0",
+    "karma-sourcemap-loader": "^0.3.5",
+    "karma-webpack": "^1.5.1",
     "mocha": "^2.2.5",
     "picturefill": "^2.3.1",
     "pre-commit": "^1.0.7",
