--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "loopback-boot": "^2.6.5",
     "loopback-connector-rest": "^1.9.0",
     "loopback-datasource-juggler": "^2.19.0",
+    "moment": "^2.10.3",
     "nunjucks": "^1.3.4",
     "react": "^0.13.3",
     "react-bem-helper": "^1.0.0",
@@ -47,6 +48,7 @@
     "simple-glob": "^0.1.0",
     "slug-to-title": "0.0.1",
     "slugify": "^0.1.1",
+    "sprintf-js": "^1.0.2",
     "strong-express-metrics": "^1.1.0",
     "webpack": "^1.9.10"
   },
