--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "escape-html": "^1.0.2",
     "eslint": "^0.22.1",
     "eslint-plugin-react": "^2.4.0",
+    "flickity": "^1.1.0",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.3.0",
     "gulp-base64": "^0.1.3",
@@ -100,6 +101,7 @@
     "react-remarkable": "^1.1.1",
     "react-tap-event-plugin": "^0.1.7",
     "react-to-jsx": "^1.3.1",
+    "svg4everybody": "0.0.2",
     "testdom": "^1.0.1",
     "whatwg-fetch": "^0.9.0"
   }
