--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "gulp-webpack": "^1.4.0",
     "gulp-wrap": "^0.11.0",
     "is-retina": "^1.0.3",
+    "jquery": "^2.1.4",
     "json-loader": "^0.5.2",
     "karma": "^0.12.36",
     "karma-chai": "^0.1.0",
