Fixed a potential error on IE regarding JSON parsing

--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "react": "^0.13.3",
     "react-bem-helper": "^1.0.0",
     "react-tools": "^0.13.3",
+    "recursive-escape": "^1.0.0",
+    "recursive-unescape": "^1.0.0",
     "sassdoc": "^2.1.13",
     "serve-favicon": "^2.0.1",
     "simple-glob": "^0.1.0",
