--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "babel": "^5.4.7",
     "babel-loader": "^5.1.3",
+    "camelcase": "^1.1.0",
     "consolidate": "^0.13.1",
     "cors": "^2.5.2",
     "crypto-js": "^3.1.5",
