--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "karma-sourcemap-loader": "^0.3.5",
     "karma-webpack": "^1.5.1",
     "mocha": "^2.2.5",
+    "nock": "^2.7.0",
     "picturefill": "^2.3.1",
     "pre-commit": "^1.0.7",
     "react-highlight": "^0.4.1",
