--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "scripts": {
     "watch": "gulp",
     "lint": "gulp lint",
-    "start": "node server/server.js"
+    "start": "node server/server.js",
+    "mocha": "mocha --recursive"
   },
   "pre-commit": {
     "run": "lint",
