--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "crypto-js": "^3.1.5",
     "del": "^1.2.0",
     "errorhandler": "^1.1.1",
+    "filesize": "^3.1.2",
     "flickity": "^1.1.0",
     "lodash": "^3.9.3",
     "loopback": "^2.14.0",
