--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "svg4everybody": "0.0.2",
     "testdom": "^1.0.1",
     "webpack-stream": "^2.0.0",
-    "whatwg-fetch": "^0.9.0"
+    "whatwg-fetch": "^0.9.0",
+    "ya-csv": "^0.9.4"
   }
 }
