fix deploy buildout for staging

--- a/deploy/buildout.cfg
+++ b/deploy/buildout.cfg
@@ -8,7 +8,7 @@ supervisor = 8697
 
 [conf]
 recipe = z3c.recipe.filetemplate
-files = etc/supervisord-dev.conf
+files = etc/supervisord.conf
 
 [dirs]
 recipe = z3c.recipe.mkdir
@@ -22,5 +22,5 @@ scripts=supervisord
         supervisorctl
 eggs = supervisor
 initialization = import sys
-                 sys.argv[1:1] = ['-c', '${buildout:directory}/etc/supervisord-dev.conf']
+                 sys.argv[1:1] = ['-c', '${buildout:directory}/etc/supervisord.conf']
 
