--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cors": "^2.5.2",
     "crypto-js": "^3.1.5",
     "del": "^1.2.0",
+    "dotenv": "^1.2.0",
     "errorhandler": "^1.1.1",
     "filesize": "^3.1.2",
     "flickity": "^1.1.0",
