add winston (logger) as dependency

--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "slugify": "^0.1.1",
     "sprintf-js": "^1.0.2",
     "strong-express-metrics": "^1.1.0",
-    "webpack": "^1.9.10"
+    "webpack": "^1.9.10",
+    "winston": "^1.0.1"
   },
   "optionalDependencies": {
     "loopback-explorer": "^1.1.0"
