--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "nunjucks": "^1.3.4",
     "react": "^0.13.3",
     "react-bem-helper": "^1.0.0",
+    "react-swipeable": "^3.0.2",
     "react-tools": "^0.13.3",
     "recursive-escape": "^1.0.0",
     "recursive-unescape": "^1.0.0",
