--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "react-tap-event-plugin": "^0.1.7",
     "react-to-jsx": "^1.3.1",
     "sinon": "^1.15.4",
+    "supertest": "^1.0.1",
     "testdom": "^1.0.1",
     "whatwg-fetch": "^0.9.0"
   }
