--- a/package.json
+++ b/package.json
@@ -91,9 +91,11 @@
     "karma-cli": "0.0.4",
     "karma-mocha": "^0.2.0",
     "karma-mocha-reporter": "^1.0.2",
+    "karma-phantomjs-launcher": "^0.2.0",
     "karma-sourcemap-loader": "^0.3.5",
     "karma-webpack": "^1.5.1",
     "mocha": "^2.2.5",
+    "phantomjs-polyfill": "0.0.1",
     "picturefill": "^2.3.1",
     "pre-commit": "^1.0.7",
     "react-highlight": "^0.4.1",
