--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "scripts": {
     "watch": "gulp",
+    "build": "gulp build",
+    "watch:prod": "gulp --prod",
+    "build:prod": "gulp build --prod",
     "lint": "gulp lint",
+    "test": "gulp test",
     "start": "node server/server.js"
   },
   "pre-commit": {
@@ -35,9 +39,6 @@
     "del": "^1.2.0",
     "dotenv": "^1.2.0",
     "errorhandler": "^1.1.1",
-    "filesize": "^3.1.2",
-    "flickity": "^1.1.0",
-    "jquery": "^2.1.4",
     "lodash": "^3.9.3",
     "loopback": "^2.14.0",
     "loopback-boot": "^2.6.5",
@@ -50,7 +51,6 @@
     "react-tools": "^0.13.3",
     "recursive-escape": "^1.0.0",
     "recursive-unescape": "^1.0.0",
-    "sassdoc": "^2.1.13",
     "serve-favicon": "^2.0.1",
     "simple-glob": "^0.1.0",
     "slug-to-title": "0.0.1",
@@ -67,6 +67,8 @@
     "escape-html": "^1.0.2",
     "eslint": "^0.22.1",
     "eslint-plugin-react": "^2.4.0",
+    "filesize": "^3.1.2",
+    "flickity": "^1.1.0",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.3.0",
     "gulp-base64": "^0.1.3",
@@ -83,11 +85,11 @@
     "gulp-webpack": "^1.4.0",
     "gulp-wrap": "^0.11.0",
     "is-retina": "^1.0.3",
+    "jquery": "^2.1.4",
     "json-loader": "^0.5.2",
     "karma": "^0.12.36",
     "karma-chai": "^0.1.0",
     "karma-chai-plugins": "^0.6.0",
-    "karma-chrome-launcher": "^0.1.12",
     "karma-cli": "0.0.4",
     "karma-mocha": "^0.2.0",
     "karma-mocha-reporter": "^1.0.2",
@@ -102,6 +104,8 @@
     "react-remarkable": "^1.1.1",
     "react-tap-event-plugin": "^0.1.7",
     "react-to-jsx": "^1.3.1",
+    "sassdoc": "^2.1.13",
+    "svg4everybody": "0.0.2",
     "testdom": "^1.0.1",
     "whatwg-fetch": "^0.9.0"
   }
