--- a/package.json
+++ b/package.json
@@ -79,7 +79,6 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.5",
-    "gulp-webpack": "^1.4.0",
     "gulp-wrap": "^0.11.0",
     "is-retina": "^1.0.3",
     "jquery": "^2.1.4",
@@ -104,6 +103,7 @@
     "sassdoc": "^2.1.13",
     "svg4everybody": "0.0.2",
     "testdom": "^1.0.1",
+    "webpack-stream": "^2.0.0",
     "whatwg-fetch": "^0.9.0"
   }
 }
