--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "del": "^1.2.0",
     "dotenv": "^1.2.0",
     "errorhandler": "^1.1.1",
+    "gulp-mocha": "^2.1.2",
+    "hmacsha1": "^1.0.0",
     "lodash": "^3.9.3",
     "loopback": "^2.14.0",
     "loopback-boot": "^2.6.5",
