--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "sassdoc": "^2.1.13",
     "svg4everybody": "0.0.2",
     "testdom": "^1.0.1",
+    "to-slug": "0.0.0",
     "webpack-stream": "^2.0.0",
     "whatwg-fetch": "^0.9.0",
     "ya-csv": "^0.9.4"
