provide multiple domains and forward x-skin to node server

--- a/localdev/buildout.cfg
+++ b/localdev/buildout.cfg
@@ -19,7 +19,7 @@ files = etc/supervisord.conf
 extends = ports
 
 [backend]
-upstream = aaz-azdev.lovelysystems.com
+upstream = azdev.lovelysystems.com
 api = api-azdev.lovelysystems.com
 node = localhost:8000
 
