--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "del": "^1.2.0",
     "dotenv": "^1.2.0",
     "errorhandler": "^1.1.1",
+    "get-query-param": "^1.0.0",
     "gulp-mocha": "^2.1.2",
     "hmacsha1": "^1.0.0",
     "lodash": "^3.9.3",
