--- a/package.json
+++ b/package.json
@@ -95,12 +95,14 @@
     "karma-sourcemap-loader": "^0.3.5",
     "karma-webpack": "^1.5.1",
     "mocha": "^2.2.5",
+    "phantomcss": "^0.10.2",
     "phantomjs-polyfill": "0.0.1",
     "picturefill": "^2.3.1",
     "pre-commit": "^1.0.7",
     "react-highlight": "^0.4.1",
     "react-remarkable": "^1.1.1",
     "react-to-jsx": "^1.3.1",
+    "resemblejs": "^1.3.0",
     "sassdoc": "^2.1.13",
     "svg4everybody": "0.0.2",
     "testdom": "^1.0.1",
