--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "phantomjs-polyfill": "0.0.1",
     "picturefill": "^2.3.1",
     "pre-commit": "^1.0.7",
+    "promisify-node": "^0.1.5",
     "react-highlight": "^0.4.1",
     "react-remarkable": "^1.1.1",
     "react-to-jsx": "^1.3.1",
