--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
+NODE_ENV=development
 GOLDBACH_SALT=FyfgR5fadpR7S9w
 DISQUS_SHORTNAME=azmedien-staging
+KALTURA_ACCOUNT_ID=1789881
+KALTURA_AUTOPLAY=false
+KALTURA_PLAYER_ID=26921101
+KALTURA_PLAYER_NOADS_ID=29381931
+KALTURA_TRACKING_URL=https://aznetz.wemfbox.ch/cgi-bin/ivw/CP/aaz?r=http%3A//www.aargauerzeitung.ch/ressort/subressort/article-title-129298028&d=&x=
