add two .env files for easy use of envs

--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,5 @@
 NODE_ENV=development
-STATIC_ASSETS=/__node__/__static__/client
+STATIC_ASSETS=/client
 GOLDBACH_SALT=FyfgR5fadpR7S9w
 DISQUS_SHORTNAME=azmedien-staging
 KALTURA_ACCOUNT_ID=1789881
