add topic page router

--- a/localdev/buildout.cfg
+++ b/localdev/buildout.cfg
@@ -19,7 +19,7 @@ files = etc/supervisord.conf
 extends = ports
 
 [backend]
-upstream = azdev.lovelysystems.com
+upstream = $skin_name-azdev.lovelysystems.com
 api = api-azdev.lovelysystems.com
 node = localhost:8000
 
