--- a/localdev/nginx/www.conf.in
+++ b/localdev/nginx/www.conf.in
@@ -67,7 +67,7 @@ server {
 
     location / {
         proxy_set_header Cookie "ssi_off=1";
-        proxy_pass http://$skin_name-${backend:upstream};
+        proxy_pass http://${backend:upstream};
     }
 }
 
