--- a/localdev/nginx/www.conf.in
+++ b/localdev/nginx/www.conf.in
@@ -34,6 +34,7 @@ server {
     }
 
     location ~ '^/__node__/__static__/' {
+        ssi off;
         rewrite ^/__node__/__static__/(.*) /$1;
         proxy_set_header X-SKIN $skin_name;
         proxy_pass http://${backend:node};
