fix local dev nginx setup

--- a/localdev/staging.cfg
+++ b/localdev/staging.cfg
@@ -7,5 +7,5 @@
 extends = buildout.cfg
 
 [backend]
-upstream = aaz-azstaging.lovelysystems.com
+upstream = $skin_name-azstaging.lovelysystems.com
 api = api-azstaging.lovelysystems.com
