--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "silent": true
   },
   "dependencies": {
+    "axios": "^0.5.4",
     "babel": "^5.4.7",
     "babel-loader": "^5.1.3",
     "camelcase": "^1.1.0",
