--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
   "dependencies": {
     "axios": "^0.5.4",
     "babel": "^5.4.7",
+    "babel-core": "^5.8.20",
     "babel-loader": "^5.1.3",
     "camelcase": "^1.1.0",
     "consolidate": "^0.13.1",
+    "cookie-session": "^1.2.0",
     "cors": "^2.5.2",
     "crypto-js": "^3.1.5",
     "del": "^1.2.0",
