add AZUser model

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -69,5 +69,9 @@
   "NewsRessort": {
     "dataSource": "az-api",
     "public": false
+  },
+  "AZUser": {
+    "dataSource": "az-api",
+    "public": false
   }
 }
