add `SESSION_COOKIE` and `SESSION_SECRET` to .env file

--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ KALTURA_PLAYER_NOADS_ID=29381931
 KALTURA_TRACKING_URL=https://aznetz.wemfbox.ch/cgi-bin/ivw/CP/aaz?r=http%3A//www.aargauerzeitung.ch/ressort/subressort/article-title-129298028&d=&x=
 WUFOO_USERNAME=azmedien
 WUFOO_FEEDBACK_FORM=z1wmmdgn1g9d5e8
+SESSION_COOKIE=azrsession
+SESSION_SECRET=secret
