--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ KALTURA_AUTOPLAY=false
 KALTURA_PLAYER_ID=26921101
 KALTURA_PLAYER_NOADS_ID=29381931
 KALTURA_TRACKING_URL=https://aznetz.wemfbox.ch/cgi-bin/ivw/CP/aaz?r=http%3A//www.aargauerzeitung.ch/ressort/subressort/article-title-129298028&d=&x=
+SESSION_COOKIE=azrsession
+SESSION_SECRET=secret
