reinitialize adscript, adjust layout for side ad

--- a/app/assets/includes/advertising/ad-config.json
+++ b/app/assets/includes/advertising/ad-config.json
@@ -1,6 +1,6 @@
 [
   {
-    "websiteName": "grenchnertagblatt.ch",
+    "websiteName": "grenchnertagblatt.ch_2015",
     "websiteDomain": "grenchnertagblatt.ch",
     "websiteId": "1179263",
     "pageTypes": [
@@ -35,19 +35,11 @@
             ]
           },
           {
-            "name": "rectangle",
+            "name": "rectangle_halfpage",
             "placements": [
               {
                 "id": "5720169",
                 "type": "desktop"
-              },
-              {
-                "id": "5720156",
-                "type": "tablet"
-              },
-              {
-                "id": "5720168",
-                "type": "mobile"
               }
             ]
           },
@@ -99,6 +91,19 @@
               {
                 "id": "5720153",
                 "type": "desktop"
+              }
+            ]
+          },
+          {
+            "name": "rectangle",
+            "placements": [
+              {
+                "id": "5720156",
+                "type": "tablet"
+              },
+              {
+                "id": "5720168",
+                "type": "mobile"
               }
             ]
           },
@@ -428,19 +433,11 @@
             ]
           },
           {
-            "name": "rectangle",
+            "name": "rectangle_halfpage",
             "placements": [
               {
                 "id": "5720213",
                 "type": "desktop"
-              },
-              {
-                "id": "5720227",
-                "type": "mobile"
-              },
-              {
-                "id": "5720238",
-                "type": "tablet"
               }
             ]
           },
@@ -492,6 +489,19 @@
               {
                 "id": "5720200",
                 "type": "desktop"
+              }
+            ]
+          },
+          {
+            "name": "rectangle",
+            "placements": [
+              {
+                "id": "5720227",
+                "type": "mobile"
+              },
+              {
+                "id": "5720238",
+                "type": "tablet"
               }
             ]
           },
@@ -821,19 +831,11 @@
             ]
           },
           {
-            "name": "rectangle",
+            "name": "rectangle_halfpage",
             "placements": [
               {
                 "id": "5720283",
                 "type": "desktop"
-              },
-              {
-                "id": "5720270",
-                "type": "tablet"
-              },
-              {
-                "id": "5720273",
-                "type": "mobile"
               }
             ]
           },
@@ -885,6 +887,19 @@
               {
                 "id": "5720302",
                 "type": "desktop"
+              }
+            ]
+          },
+          {
+            "name": "rectangle",
+            "placements": [
+              {
+                "id": "5720270",
+                "type": "tablet"
+              },
+              {
+                "id": "5720273",
+                "type": "mobile"
               }
             ]
           },
@@ -1214,19 +1229,11 @@
             ]
           },
           {
-            "name": "rectangle",
+            "name": "rectangle_halfpage",
             "placements": [
               {
                 "id": "5720305",
                 "type": "desktop"
-              },
-              {
-                "id": "5720316",
-                "type": "tablet"
-              },
-              {
-                "id": "5720322",
-                "type": "mobile"
               }
             ]
           },
@@ -1278,6 +1285,19 @@
               {
                 "id": "5720339",
                 "type": "desktop"
+              }
+            ]
+          },
+          {
+            "name": "rectangle",
+            "placements": [
+              {
+                "id": "5720316",
+                "type": "tablet"
+              },
+              {
+                "id": "5720322",
+                "type": "mobile"
               }
             ]
           },
@@ -1607,19 +1627,11 @@
             ]
           },
           {
-            "name": "rectangle",
+            "name": "rectangle_halfpage",
             "placements": [
               {
                 "id": "5720376",
                 "type": "desktop"
-              },
-              {
-                "id": "5720379",
-                "type": "tablet"
-              },
-              {
-                "id": "5720392",
-                "type": "mobile"
               }
             ]
           },
@@ -1671,6 +1683,19 @@
               {
                 "id": "5720406",
                 "type": "desktop"
+              }
+            ]
+          },
+          {
+            "name": "rectangle",
+            "placements": [
+              {
+                "id": "5720379",
+                "type": "tablet"
+              },
+              {
+                "id": "5720392",
+                "type": "mobile"
               }
             ]
           },
@@ -2000,19 +2025,11 @@
             ]
           },
           {
-            "name": "rectangle",
+            "name": "rectangle_halfpage",
             "placements": [
               {
                 "id": "5720467",
                 "type": "desktop"
-              },
-              {
-                "id": "5720428",
-                "type": "mobile"
-              },
-              {
-                "id": "5720459",
-                "type": "tablet"
               }
             ]
           },
@@ -2064,6 +2081,19 @@
               {
                 "id": "5720440",
                 "type": "desktop"
+              }
+            ]
+          },
+          {
+            "name": "rectangle",
+            "placements": [
+              {
+                "id": "5720428",
+                "type": "mobile"
+              },
+              {
+                "id": "5720459",
+                "type": "tablet"
               }
             ]
           },
@@ -2393,19 +2423,11 @@
             ]
           },
           {
-            "name": "rectangle",
+            "name": "rectangle_halfpage",
             "placements": [
               {
                 "id": "5720533",
                 "type": "desktop"
-              },
-              {
-                "id": "5720506",
-                "type": "tablet"
-              },
-              {
-                "id": "5720518",
-                "type": "mobile"
               }
             ]
           },
@@ -2457,6 +2479,19 @@
               {
                 "id": "5720498",
                 "type": "desktop"
+              }
+            ]
+          },
+          {
+            "name": "rectangle",
+            "placements": [
+              {
+                "id": "5720506",
+                "type": "tablet"
+              },
+              {
+                "id": "5720518",
+                "type": "mobile"
               }
             ]
           },
@@ -2786,19 +2821,11 @@
             ]
           },
           {
-            "name": "rectangle",
+            "name": "rectangle_halfpage",
             "placements": [
               {
                 "id": "5720569",
                 "type": "desktop"
-              },
-              {
-                "id": "5720538",
-                "type": "mobile"
-              },
-              {
-                "id": "5720587",
-                "type": "tablet"
               }
             ]
           },
@@ -2850,6 +2877,19 @@
               {
                 "id": "5720555",
                 "type": "desktop"
+              }
+            ]
+          },
+          {
+            "name": "rectangle",
+            "placements": [
+              {
+                "id": "5720538",
+                "type": "mobile"
+              },
+              {
+                "id": "5720587",
+                "type": "tablet"
               }
             ]
           },
