--- a/package.json
+++ b/package.json
@@ -40,16 +40,14 @@
     "del": "^1.2.0",
     "dotenv": "^1.2.0",
     "errorhandler": "^1.1.1",
+    "express": "^4.13.3",
     "get-query-param": "^1.0.0",
     "gulp-mocha": "^2.1.2",
     "hmacsha1": "^1.0.0",
     "lodash": "^3.9.3",
-    "loopback": "^2.14.0",
-    "loopback-boot": "^2.6.5",
-    "loopback-connector-rest": "^1.9.0",
-    "loopback-datasource-juggler": "^2.19.0",
     "moment": "^2.10.3",
     "nunjucks": "^1.3.4",
+    "qs": "^4.0.0",
     "react": "^0.13.3",
     "react-bem-helper": "^1.0.0",
     "react-tools": "^0.13.3",
@@ -62,8 +60,7 @@
     "slugify": "^0.1.1",
     "sprintf-js": "^1.0.2",
     "strong-express-metrics": "^1.1.0",
-    "webpack": "^1.9.10",
-    "winston": "^1.0.1"
+    "webpack": "^1.9.10"
   },
   "optionalDependencies": {
     "loopback-explorer": "^1.1.0"
