DeviceIcons: adding icons for missing domains and updating Android manifest files

--- a/app/assets/images/device-icons/bzb/manifest.json
+++ b/app/assets/images/device-icons/bzb/manifest.json
@@ -1,5 +1,5 @@
 {
-	"name": "Basellandschaftliche Zeitung",
+	"name": "bz Basel",
 	"icons": [
 		{
 			"src": "__node__\/__static__\/client\/images\/device-icons\/bz\/android-chrome-36x36.png",
