--- a/app/assets/images/device-icons/ot/manifest.json
+++ b/app/assets/images/device-icons/ot/manifest.json
@@ -1,5 +1,5 @@
 {
-	"name": "OT",
+	"name": "Oltner Tagblatt",
 	"icons": [
 		{
 			"src": "\/__node__\/__static__\/client\/images\/device-icons\/ot\/android-chrome-36x36.png",
