--- a/app/assets/images/device-icons/gtb/manifest.json
+++ b/app/assets/images/device-icons/gtb/manifest.json
@@ -1,5 +1,5 @@
 {
-	"name": "AAZ",
+	"name": "Grenchner Tagblatt",
 	"icons": [
 		{
 			"src": "\/__node__\/__static__\/client\/images\/device-icons\/aaz\/android-chrome-36x36.png",
