patch `cookie-session` to work nicely with python cookies

--- a/.env
+++ b/.env
@@ -11,4 +11,4 @@ KALTURA_TRACKING_URL=https://aznetz.wemfbox.ch/cgi-bin/ivw/CP/aaz?r=http%3A//www
 WUFOO_USERNAME=azmedien
 WUFOO_FEEDBACK_FORM=z1wmmdgn1g9d5e8
 SESSION_COOKIE=azrsession
-SESSION_SECRET=secret
+SESSION_SECRET=b2f416b900abeece5bf2ff176d2ee544
