--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "consolidate": "^0.13.1",
     "cors": "^2.5.2",
     "crypto-js": "^3.1.5",
+    "debug": "^2.2.0",
     "del": "^1.2.0",
     "dotenv": "^1.2.0",
     "errorhandler": "^1.1.1",
@@ -43,9 +44,11 @@
     "get-query-param": "^1.0.0",
     "gulp-mocha": "^2.1.2",
     "hmacsha1": "^1.0.0",
+    "keygrip": "^1.0.1",
     "lodash": "^3.9.3",
     "moment": "^2.10.3",
     "nunjucks": "^1.3.4",
+    "on-headers": "^1.0.0",
     "qs": "^4.0.0",
     "react": "^0.13.3",
     "react-bem-helper": "^1.0.0",
