--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NODE_ENV=production
-STATIC_ASSETS=/__node__/__static__/client
+STATIC_ASSETS=/__node__/@@VERSION/__static__/client
 PAGINATED=12
 GOLDBACH_SALT=FyfgR5fadpR7S9w
 DISQUS_SHORTNAME=azmedien-staging
