--- a/deploy/etc/supervisord.conf.in
+++ b/deploy/etc/supervisord.conf.in
@@ -18,9 +18,8 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl = http://localhost:${ports:supervisor}
 
 [program:app]
-command = node .
+command = node . NODE_ENV=production
 directory = ${buildout:directory}/..
-environment = NODE_ENV="production",DISQUS_API_KEY="${node-env:disqus-api-key}"
 redirect_stderr=true
 priority = 1
 stopasgroup = true
