--- a/package.json
+++ b/package.json
@@ -62,8 +62,7 @@
     "slugify": "^0.1.1",
     "sprintf-js": "^1.0.2",
     "strong-express-metrics": "^1.1.0",
-    "webpack": "^1.9.10",
-    "xmldom": "^0.1.19"
+    "webpack": "^1.9.10"
   },
   "optionalDependencies": {},
   "devDependencies": {
