changed the way how environment settings are loaded

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 NODE_ENV=production
 STATIC_ASSETS=/__node__/@@VERSION/__static__/client
+VERSION=@@VERSION
 PAGINATED=12
 GOLDBACH_SALT=FyfgR5fadpR7S9w
 DISQUS_SHORTNAME=azmedien-staging
