--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,6 @@
 NODE_ENV=development
 STATIC_ASSETS=/client
+VERSION=@@VERSION
 PAGINATED=12
 GOLDBACH_SALT=FyfgR5fadpR7S9w
 DISQUS_SHORTNAME=azmedien-staging
