--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ deploy/.installed.cfg
 deploy/bin/*
 deploy/egs/*
 deploy/etc/supervisord-dev.conf
+.env.deploy
 
 # keep seed file for ad config
 !/scripts/az-banners-all-sites.csv
