--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "get-query-param": "^1.0.0",
     "gulp-mocha": "^2.1.2",
     "hmacsha1": "^1.0.0",
+    "imports-loader": "^0.6.4",
     "keygrip": "^1.0.1",
     "lodash": "^3.9.3",
     "moment": "^2.10.3",
