--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "karma-phantomjs-launcher": "^0.2.0",
     "karma-sourcemap-loader": "^0.3.5",
     "karma-webpack": "^1.7.0",
+    "libxmljs": "^0.14.2",
     "mocha": "^2.2.5",
     "nock": "^2.7.0",
     "phantomjs-polyfill": "0.0.1",
