added bugmuncher script to the __body_bottom include

--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ NODE_ENV=production
 STATIC_ASSETS=/__node__/@@VERSION/__static__/client
 VERSION=@@VERSION
 PAGINATED=12
+BUG_MUNCHER=false
 GOLDBACH_SALT=FyfgR5fadpR7S9w
 DISQUS_SHORTNAME=azmedien-staging
 KALTURA_ACCOUNT_ID=1789881
