localdev nginx redirect rss2 URLs to node

--- a/localdev/nginx/www.conf.in
+++ b/localdev/nginx/www.conf.in
@@ -49,6 +49,16 @@ server {
         break;
     }
 
+    location ~ '/.*rss2(full)?.xml$' {
+        ssi off;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-SKIN $skin_name;
+        proxy_pass http://localhost:8000;
+        break;
+    }
+
     location ~ '/__addefend__' {
         echo '';
     }
