--- a/localdev/nginx/www.conf.in
+++ b/localdev/nginx/www.conf.in
@@ -49,14 +49,21 @@ server {
         break;
     }
 
-    location ~ '/.*rss2(full)?.xml$' {
+    location ~ '^/__rss2__/' {
         ssi off;
+        rewrite ^/__rss2__/(.*) /$1;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Host $http_host;
         proxy_set_header X-SKIN $skin_name;
-        proxy_pass http://localhost:8000;
+        proxy_pass http://${backend:node};
         break;
+    }
+
+    location ~ '/.*rss2(full)?.xml$' {
+        if ($skin_name != 'az') {
+            rewrite /(.*) /__rss2__/$1;
+        }
     }
 
     location ~ '/__addefend__' {
