--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "sprintf-js": "^1.0.2",
     "strong-express-metrics": "^1.1.0",
     "webpack": "^1.9.10",
-    "nodejs-nocaptcha-recaptcha": "^1.0.0"
+    "nodejs-nocaptcha-recaptcha": "^1.0.0",
+    "nodemailer": "^1.4.0"
   },
   "optionalDependencies": {},
   "devDependencies": {
