--- a/package.json
+++ b/package.json
@@ -66,13 +66,14 @@
     "strong-express-metrics": "^1.1.0",
     "webpack": "^1.9.10",
     "nodejs-nocaptcha-recaptcha": "^1.0.0",
-    "nodemailer": "^1.4.0"
+    "nodemailer": "^1.4.0",
+    "escape-html": "^1.0.2",
+    "es6-promise": "^3.0.2",
+    "is-retina": "^1.0.3"
   },
   "optionalDependencies": {},
   "devDependencies": {
     "chai": "^3.0.0",
-    "es6-promise": "^3.0.2",
-    "escape-html": "^1.0.2",
     "eslint": "^0.22.1",
     "eslint-plugin-react": "^2.4.0",
     "filesize": "^3.1.2",
@@ -92,7 +93,6 @@
     "gulp-util": "^3.0.5",
     "gulp-wrap": "^0.11.0",
     "imports-loader": "^0.6.4",
-    "is-retina": "^1.0.3",
     "jquery": "^2.1.4",
     "json-loader": "^0.5.2",
     "karma": "^0.13.9",
