--- a/deploy/buildout.cfg
+++ b/deploy/buildout.cfg
@@ -2,13 +2,21 @@
 parts = dirs
         conf
         supervisor
+eggs-directory = eggs
+
+[install]
+prefix=/opt/${install:name}
+rundir=/var/run/${install:name}
+logdir=/var/log/${install:name}
+confdir=/etc/${install:name}
 
 [ports]
 supervisor = 8697
 
 [conf]
 recipe = z3c.recipe.filetemplate
-files = etc/supervisord.conf
+files = files/supervisord.conf
+        files/supervisord.init.d
 
 [dirs]
 recipe = z3c.recipe.mkdir
