--- a/package.json
+++ b/package.json
@@ -98,10 +98,13 @@
     "karma": "^0.13.9",
     "karma-chai": "^0.1.0",
     "karma-chai-plugins": "^0.6.0",
+    "karma-chai-sinon": "^0.1.5",
+    "karma-chrome-launcher": "^0.2.0",
     "karma-cli": "0.0.4",
     "karma-mocha": "^0.2.0",
     "karma-mocha-reporter": "^1.0.2",
     "karma-phantomjs-launcher": "^0.2.0",
+    "karma-sinon-chai": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.5",
     "karma-webpack": "^1.7.0",
     "libxmljs": "^0.14.2",
@@ -115,7 +118,8 @@
     "react-remarkable": "^1.1.1",
     "react-to-jsx": "^1.3.1",
     "sassdoc": "^2.1.13",
-    "sinon": "^1.15.4",
+    "sinon": "git+https://github.com/uberVU/Sinon.JS",
+    "sinon-chai": "^2.8.0",
     "supertest": "^1.0.1",
     "svg4everybody": "0.0.2",
     "testdom": "^1.0.1",
