--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "karma-sinon-chai": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.5",
     "karma-webpack": "^1.7.0",
+    "legit-tests": "^0.4.4",
     "libxmljs": "^0.14.2",
     "mocha": "^2.2.5",
     "nock": "^2.7.0",
