--- a/deploy/etc/supervisord.conf.in
+++ b/deploy/etc/supervisord.conf.in
@@ -1,5 +1,5 @@
 [inet_http_server]
-port = 0.0.0.0:${ports:supervisor}
+port = 0.0.0.0:11499
 
 [supervisord]
 logfile = ${buildout:directory}/var/log/supervisord.log
@@ -15,7 +15,7 @@ childlogdir = ${buildout:directory}/var/log/supervisor
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
-serverurl = http://localhost:${ports:supervisor}
+serverurl = http://localhost:11499
 
 [program:app]
 command = node . NODE_ENV=production DEPLOYED=1 PORT=11400
