--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "watch": "gulp",
     "lint": "gulp lint",
     "mocha": "mocha --recursive --colors --require test/setup",
-    "build_client": "gulp assets --production",
+    "build": "gulp build --production",
     "test": "gulp test",
     "start": "node server/server.js"
   },
