--- a/deploy/etc/supervisord.conf.in
+++ b/deploy/etc/supervisord.conf.in
@@ -18,7 +18,8 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl = http://localhost:11499
 
 [program:app]
-command = node . NODE_ENV=production DEPLOYED=1 PORT=11400
+environment=NODE_ENV=production,PORT=11400
+command = node .
 directory = ${buildout:directory}/..
 redirect_stderr=true
 priority = 1
