--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "qs": "^4.0.0",
     "react": "^0.13.3",
     "react-bem-helper": "^1.0.0",
+    "react-dropdown": "^0.6.1",
     "react-tools": "^0.13.3",
     "recursive-escape": "^1.0.0",
     "recursive-unescape": "^1.0.0",
