added varnish cache headers to all endpoints

--- a/.env
+++ b/.env
@@ -14,3 +14,5 @@ WUFOO_USERNAME=azmedien
 WUFOO_FEEDBACK_FORM=z1wmmdgn1g9d5e8
 SESSION_COOKIE=azrsession
 SESSION_SECRET=b2f416b900abeece5bf2ff176d2ee544
+VARNISH_CACHE_TIME=60
+VARNISH_GRACE_TIME=600
