--- a/localdev/nginx/www.conf.in
+++ b/localdev/nginx/www.conf.in
@@ -63,6 +63,17 @@ server {
         }
     }
 
+    location ~ '^/(dashboard|anmelden|registrieren)$' {
+        # pages which are rendered directly in node
+        ssi on;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-SKIN $skin_name;
+        proxy_pass http://${backend:node};
+        break;
+    }
+
     location ~ '/__addefend__' {
         echo '';
     }
