--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-loader": "^5.1.3",
     "camelcase": "^1.1.0",
     "consolidate": "^0.13.1",
+    "cookie": "^0.2.2",
     "cors": "^2.5.2",
     "crypto-js": "^3.1.5",
     "debug": "^2.2.0",
