Add wildcard for paths behind dashboard
for example: /profil
(possibly temporary solution)

--- a/localdev/nginx/www.conf.in
+++ b/localdev/nginx/www.conf.in
@@ -63,7 +63,7 @@ server {
         }
     }
 
-    location ~ '^/(dashboard|anmelden|registrieren)$' {
+    location ~ '^/(dashboard(.*)|anmelden|registrieren)$' {
         # pages which are rendered directly in node
         ssi on;
         proxy_set_header X-Real-IP $remote_addr;
