added retrieval of login credentials from .env

--- a/.env
+++ b/.env
@@ -6,6 +6,8 @@ BUG_MUNCHER=false
 GOLDBACH_SALT=FyfgR5fadpR7S9w
 DISQUS_SHORTNAME=azmedien-staging
 KALTURA_ACCOUNT_ID=1789881
+KALTURA_API_USER=Viewer
+KALTURA_API_PASSWORD=Lfd7sdfhl!@
 KALTURA_AUTOPLAY=false
 KALTURA_PLAYER_ID=26605721
 KALTURA_PLAYER_NOADS_ID=30231131
