Centralise styleguide into main App and clean up Gulp massively

--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,5 @@
 NODE_ENV=development
-STATIC_ASSETS=/client
+STATIC_ASSETS=/__node__/@@VERSION/__static__/client
 VERSION=@@VERSION
 PAGINATED=12
 GOLDBACH_SALT=FyfgR5fadpR7S9w
